--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,17 @@ beautifulsoup4==4.8.2
 bs4==0.0.1
 certifi==2019.9.11
 chardet==3.0.4
+cycler==0.10.0
+demjson==2.2.4
 html-parser==0.2
 idna==2.8
 importlib-metadata==1.3.0
 itchat==1.3.10
+Jinja2==2.10.3
+kiwisolver==1.1.0
 lxml==4.4.2
+MarkupSafe==1.1.1
+matplotlib==3.1.2
 more-itertools==8.0.2
 numpy==1.18.1
 packaging==20.0
@@ -29,6 +35,7 @@ PyYAML==5.3
 redis==3.3.8
 requests==2.22.0
 schedule==0.6.0
+selenium==3.141.0
 six==1.13.0
 soupsieve==1.9.5
 SQLAlchemy==1.3.12
